--- a/src/app/components/pages/about/about.component.html
+++ b/src/app/components/pages/about/about.component.html
@@ -8,7 +8,7 @@
     width: 50%;
     margin-top: auto;
     margin-bottom: 15px;
-    border-radius: 6px;" matCardImage class="align-center" src="https://scontent.fsgn5-6.fna.fbcdn.net/v/t1.0-9/64486706_2343423725906141_534789064042217472_n.jpg?_nc_cat=109&_nc_sid=8bfeb9&_nc_ohc=IudxSVLgPn0AX9365Et&_nc_ht=scontent.fsgn5-6.fna&oh=b5b3625ff2b555941250ae020c42367f&oe=5EDBA5FA">
+    border-radius: 6px;" matCardImage class="align-center" src="https://scontent.fvca1-2.fna.fbcdn.net/v/t1.0-9/64486706_2343423725906141_534789064042217472_n.jpg?_nc_cat=109&_nc_sid=8bfeb9&_nc_ohc=0q5mJjzAVFQAX_UEdhS&_nc_ht=scontent.fvca1-2.fna&oh=fd32a24b6625e652912176beca5cc91c&oe=5F07277A">
     <mat-card-content>
         Project-Web-Angular
     </mat-card-content>
