--- a/src/app/components/admin/admin.component.css
+++ b/src/app/components/admin/admin.component.css
@@ -2,13 +2,35 @@
 table {
   width: 100%;
 }
+.example-icon {
+  padding: 0 28px;
+}
 
-.mat-form-field {
+.form input[type=text] {
+  padding: 6px;
+ 
+  font-size: 17px;
+  border: none;
+}
+.search-container button {
+  float: right;
+  padding: 6px 15px;
+  background: #ddd;
+  color: #3f51b5;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+.search-container button:hover {
+  background: #ccc;
+}
+
+mat-form-field {
   font-size: 1rem;
-  width: 95%;
+  width: 100%;
   margin: 0 auto;
   display: block;
-  margin-top: 1rem;
+  text-align: center;
 }
 
 .container-btn-new{
@@ -24,3 +46,147 @@ table {
   background:aquamarine;
   cursor: pointer;
 }
+
+.navbar{
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+mat-sidenav{
+  width: 240px;
+  cursor: pointer;
+  background:white;
+  position: fixed;
+  z-index: 1000;
+}
+mat-icon{
+  cursor: pointer;
+}
+.jss510 {
+  color: #546e7a;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  margin-right: 8px;
+}
+.mat-list-base .mat-list-item{
+  color: #546e7a;
+  font-weight: 500;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+a{
+  color: white;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.example-viewport {
+  height: 850px;
+  
+  border: 1px solid black;
+}
+.jss48 {
+  height: 100%;
+  display: flex;
+  padding: 16px;
+  flex-direction: column;
+  background-color: #FFFFFF;
+}
+.jss490 {
+    display: flex;
+    min-height: fit-content;
+    align-items: center;
+    flex-direction: column;
+}
+.jss490.label{
+  display: inline-block;
+    vertical-align: top;
+    overflow: hidden;
+    position: relative;
+    margin: 20px;
+    text-align: center;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.label,img{
+  border-radius: 50%;
+  width: 110px;
+  height: 110px;
+  border: 2px solid #fff;
+}
+.jss50 {
+  margin-bottom: 16px;
+}
+
+.MuiList-padding {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.MuiList-root {
+  margin: 0;
+  padding: 0;
+  position: relative;
+  list-style: none;
+}
+.jss508 {
+  display: flex;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.MuiListItem-root {
+  width: 100%;
+  display: flex;
+  position: relative;
+  box-sizing: border-box;
+  text-align: left;
+  align-items: center;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  justify-content: flex-start;
+  text-decoration: none;
+}
+.MuiButton-label {
+  width: 100%;
+  display: inherit;
+  align-items: inherit;
+  justify-content: inherit;
+}
+
+.MuiTouchRipple-root {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  z-index: 0;
+  overflow: hidden;
+  position: absolute;
+  border-radius: inherit;
+  pointer-events: none;
+}
+
+.jss433 {
+  display: flex;
+  min-height: fit-content;
+  align-items: center;
+  flex-direction: column;
+}
+
+.jss435 {
+  margin-top: 12px;
+  text-align: center;
+}
+.MuiTypography-h4 {
+  color: #263238;
+  font-size: 15px;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: -0.06px;
+}
+
