--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,66 +1,84 @@
-<mat-form-field>
-  <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium">
-</mat-form-field>
+<mat-toolbar color="primary" class="navbar">
 
-<div class="container-btn-new">
-  <button class="button" mat-stroked-button (click)="onNewPost()">
-    <mat-icon>note_add</mat-icon>&nbsp; New Post
+  <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
+    *ngIf="isHandset$ | async">
+    <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
   </button>
-</div>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" >
+  &nbsp;&nbsp;&nbsp;
+  <a routerLink="/">
+    <span>Home</span>
+  </a>
+  <span class="fill-remaining-space"></span>
 
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-    <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-  </ng-container>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <div class="search-container">
+    <div class="form" action="">
+      
+      <input type="text" placeholder="Search.." name="search">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </div>
+  </div>
 
-  <!-- Position Column -->
-  <ng-container matColumnDef="titlePost">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.titlePost}} </td>
-  </ng-container>
+ 
+   
+ 
+  <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">notifications</mat-icon>
+  <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">logout</mat-icon>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="contentPost">
-    <th mat-header-cell *matHeaderCellDef> Type </th>
-    <td mat-cell *matCellDef="let element"> {{element.contentPost}} </td>
-  </ng-container>
+ 
+</mat-toolbar>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="size">
-    <th mat-header-cell *matHeaderCellDef> Size </th>
-    <td mat-cell *matCellDef="let element"> {{element.size}} </td>
-  </ng-container>
+<mat-sidenav-container>
+  <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+    <cdk-virtual-scroll-viewport itemSize="20" class="example-viewport">
+      <mat-toolbar>Menu</mat-toolbar>
+      <div class="jss48">
+        <div class="jss433">
+          <div class="jss490" (ngSubmit)="onSaveUser(profileForm.value)" [formGroup]="profileForm">
+            <div class="label ">
+              <img [src]="currentImage" (click)="inputImageProfile.click()" />
+              <input hidden type="file" #inputImageProfile formControlName="photoURL"
+                (change)="handleImage(($event ?.target ?.files)[0])" />
+            </div>
+            <div class="jss435 MuiTypography-h4">
+              <input matInput formControlName="displayName">
+              <input matInput formControlName="email">
+            </div>
+          </div>
+        </div>
 
-  <ng-container matColumnDef="imagePost">
-    <th mat-header-cell *matHeaderCellDef> Image </th>
-    <td mat-cell *matCellDef="let element "> 
-      <img style="width: 50px; height: 60px; " [src]=element.imagePost>
-       </td>
-  </ng-container>
+        <mat-divider style="margin: 16px 0px;"></mat-divider>
 
-  
+        <ul class="MuiList-root jss50 MuiList-padding">
+          <li class=" jss508">
+            <div style="flex-grow: 1;">
+              <mat-nav-list class="MuiButton-label">
+                <a mat-list-item routerLink="posts">
+                  <mat-icon class="jss510">dashboard</mat-icon>Dashboard
+                </a>
+                <span class="MuiTouchRipple-root"></span>
+              </mat-nav-list>
+            </div>
+          </li>
+          <li class=" jss508">
+            <div style="flex-grow: 1;">
+              <mat-nav-list class="MuiButton-label">
+                <a mat-list-item routerLink="profile">
+                  <mat-icon class="jss510">people</mat-icon>User Profile
+                </a>
+                <span class="MuiTouchRipple-root"></span>
+              </mat-nav-list>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </cdk-virtual-scroll-viewport>
+  </mat-sidenav>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef> Price </th>
-    <td mat-cell *matCellDef="let element"> {{element.price}} </td>
-  </ng-container>
+  <mat-sidenav-content>  
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
 
-  <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef> </th>
-    <td mat-cell *matCellDef="let element"> 
-      <button mat-stroked-button color="primary" (click)="onEditPost(element)">
-        <mat-icon>edit</mat-icon>
-      </button>
-      <button mat-stroked-button color="accent" (click)="onDeletePost(element)">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+</mat-sidenav-container>
