--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,24 +1,43 @@
-<mat-card>
-    <mat-card-title class="mat-card-title">Login</mat-card-title>
-    <mat-card-content>
-        <form  [formGroup]="loginForm" (ngSubmit)="onLogin(loginForm.value)">
-            <p>
-                <mat-form-field>
-                    <input type="text"
-                     matInput placeholder="Username" 
-                     formControlName="email"/>
-                </mat-form-field>
-            </p>
-            <p>
-                <mat-form-field>
-                    <input type="password" 
-                    matInput placeholder="Password" 
-                    formControlName="password"/>
-                </mat-form-field>
-            </p>
-            <button style="width: 100%" type="submit" mat-raised-button color="primary">Login</button>
-        </form>
-    </mat-card-content>
-</mat-card>
+<div class="background">
 
 
+    <mat-card>
+        <mat-card-title class="mat-card-title">Sign in</mat-card-title>
+        <p class="Sign-in-with-social-media">
+            Sign in with social media
+        </p>
+        
+            <button class="formGroup" type="button" (click)="authSvc.GoogleAuth()">
+                Log in with Google
+            </button>
+    
+            <p class="Sign-in-with-social-media">
+                or login with email address
+            </p>
+        
+    
+    
+        <mat-card-content>
+            <form [formGroup]="loginForm" (ngSubmit)="onLogin(loginForm.value)">
+                <p>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Username</mat-label>
+                        <input type="text" matInput placeholder="Please enter your account" formControlName="email" />
+                        <mat-icon matSuffix>account_circle</mat-icon>                  
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Password </mat-label>
+                        <input type="password" matInput placeholder="Please enter your account" formControlName="password" />
+                        <mat-icon matSuffix>lock</mat-icon>                  
+                    </mat-form-field>
+                </p>
+                
+                <button style="width: 100%" type="submit" mat-raised-button color="primary">SIGN IN NOW</button>
+            </form>
+        </mat-card-content>
+    </mat-card>
+    </div>
+    
+    <!-- Calling GoogleAuth() Api from AuthService -->
