--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,9 +1,15 @@
+
 <mat-toolbar color="primary">
     <a [routerLink]="['/']">{{appName}}</a>
     <span class="fill-remaining-space"></span>
 
-    <a routerLink="/admin" routerLinkActive="active" *ngIf="authSvc.userData | async">
-        <button mat-button>Admin</button>
+    
+    
+               
+            
+    <a [routerLink]="['/admin/posts']" routerLinkActive="active" *ngIf="authSvc.userData$ | async">
+       
+        <button mat-button>Admin</button>   
     </a>
 
 
@@ -11,7 +17,7 @@
         <button mat-button>About</button>
     </a>
 
-    <a *ngIf="authSvc.userData | async; else showLogin" (click)="onLogout()">
+    <a *ngIf="authSvc.userData$ | async; else showLogin" (click)="onLogout()">
         <button mat-button>Logout</button>
     </a>
 
