--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -22,9 +22,13 @@
 
  
    
+  
+      
+  
  
   <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">notifications</mat-icon>
-  <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">logout</mat-icon>
+  &nbsp;  &nbsp;  
+  <img style="width: 40px;height: 40px;" [src]="currentImage">
 
  
 </mat-toolbar>
@@ -66,7 +70,17 @@
             <div style="flex-grow: 1;">
               <mat-nav-list class="MuiButton-label">
                 <a mat-list-item routerLink="profile">
-                  <mat-icon class="jss510">people</mat-icon>User Profile
+                  <mat-icon class="jss510">person</mat-icon>User Profile
+                </a>
+                <span class="MuiTouchRipple-root"></span>
+              </mat-nav-list>
+            </div>
+          </li>
+          <li class=" jss508">
+            <div style="flex-grow: 1;">
+              <mat-nav-list class="MuiButton-label">
+                <a mat-list-item routerLink="registered">
+                  <mat-icon class="jss510">person_add</mat-icon>Add User
                 </a>
                 <span class="MuiTouchRipple-root"></span>
               </mat-nav-list>
