--- a/src/app/components/admin/profile/profile.component.html
+++ b/src/app/components/admin/profile/profile.component.html
@@ -10,18 +10,16 @@
         </mat-card-header>
         
         <mat-card-content>
-            <mat-form-field>
+            <mat-form-field appearance="outline">
                 <mat-label>Name</mat-label>
                 <input matInput placeholder="Name" formControlName="displayName">
             </mat-form-field>
 
-            <mat-form-field>
+            <mat-form-field appearance="outline">
                 <mat-label>Email</mat-label>
                 <input matInput placeholder="Email" formControlName="email">
             </mat-form-field>
-            <div class="mat-dialog-actions">
-                <input type="submit" class="mat-flat-button" value="Save"/>
-            </div>
+            
         </mat-card-content>
     </mat-card>
 </form>
