--- a/src/app/components/auth/registered/registered.component.html
+++ b/src/app/components/auth/registered/registered.component.html
@@ -1,25 +1,9 @@
-<div class="background mat-elevation-z12">
-
-
-    <mat-card>
-        <mat-card-title class="mat-card-title">Sign in</mat-card-title>
-        <p class="Sign-in-with-social-media">
-            Sign in with social media
-        </p>
-
-        <button class="formGroup" type="button" (click)="authSvc.GoogleAuth()">         
-                <!-- <img src="facebook.png"> &nbsp; &nbsp; -->
-                Sign in with Google
-        </button>
-
-        <p class="Sign-in-with-social-media">
-            or login with email address
-        </p>
-
-
-
+<div class="background">
+    <mat-card  mat-elevation-z12>
+        <mat-card-title class="mat-card-title">Registered</mat-card-title>
+    
         <mat-card-content>
-            <form [formGroup]="loginForm" (ngSubmit)="onLogin(loginForm.value)">
+            <form [formGroup]="RegisterForm" (ngSubmit)="onRegister()">
                 <p>
                     <mat-form-field appearance="outline">
                         <mat-label>Username</mat-label>
@@ -36,11 +20,8 @@
                     </mat-form-field>
                 </p>
 
-                <button style="width: 100%" type="submit" mat-raised-button color="primary">SIGN IN NOW</button>
+                <button style="width: 100%" type="submit" mat-raised-button color="primary">REGISTERED  NOW</button>
             </form>
         </mat-card-content>
-        <p>Create an account ? <a [routerLink]="['/registered']">Registered</a></p>
     </mat-card>
 </div>
-
-<!-- Calling GoogleAuth() Api from AuthService -->
