--- a/src/app/components/posts/edit-post/edit-post.component.html
+++ b/src/app/components/posts/edit-post/edit-post.component.html
@@ -1,21 +1,21 @@
 <div class="new-post-container">
     <form class="form" [formGroup]="editPostForm" (ngSubmit)="editPost(editPostForm.value)">
-        <mat-form-field>
+        <mat-form-field appearance="outline">
             <mat-label>Title</mat-label>
             <input matInput placeholder="Title post" formControlName="titlePost">
         </mat-form-field>
-        <mat-form-field >
+        <mat-form-field appearance="outline">
             <mat-label>Content</mat-label>
             <input matInput placeholder="Content post" formControlName="contentPost">
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field appearance="outline"> 
             <mat-select placeholder="Size" multiple formControlName="size">
                 <mat-option value="S">S</mat-option>
                 <mat-option value="M">M</mat-option>
                 <mat-option value="L">L</mat-option>
             </mat-select>
         </mat-form-field>
-        <mat-form-field >
+        <mat-form-field appearance="outline">
             <mat-label>Price</mat-label>
             <input matInput placeholder="Price" formControlName="price">
         </mat-form-field>
