--- a/src/app/components/posts/new-post/new-post.component.css
+++ b/src/app/components/posts/new-post/new-post.component.css
@@ -9,10 +9,11 @@
 }
 .mat-flat-button{
     width: 100%;
-    background-color: aquamarine;
+    background-color: #3847a0;
+    color: white;
 }
 .custom-file{
-    border: 1px solid #ccc;
+    border: 1px solid white;
     display: inline-block;
     padding: 6px;
     cursor: pointer;
