--- a/src/app/components/admin/admin.component.css
+++ b/src/app/components/admin/admin.component.css
@@ -12,6 +12,47 @@ table {
   font-size: 17px;
   border: none;
 }
+/* ////////////////////////////////////////// */
+/* @import url(https://fonts.googleapis.com/css?family=Open+Sans); */
+
+body{
+  background: #f2f2f2;
+  /* font-family: 'Open Sans', sans-serif; */
+}
+
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid #59c5ff;
+  border-right: none;
+  padding: 5px;
+  height: 36px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #546e7a;
+  font-size: 16px;
+}
+
+.searchTerm:focus{
+  color: #000;
+}
+
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+/* /////////////////////////////////////////////// */
+
 .search-container button {
   float: right;
   padding: 6px 15px;
@@ -78,7 +119,7 @@ mat-icon{
 }
 
 a{
-  color: white;
+  /* color: white; */
   cursor: pointer;
   text-decoration: none;
 }
@@ -115,8 +156,9 @@ a{
   border-radius: 50%;
   width: 110px;
   height: 110px;
-  border: 2px solid #fff;
+  border: 1.5px solid #fff;
 }
+
 .jss50 {
   margin-bottom: 16px;
 }
@@ -175,18 +217,20 @@ a{
   min-height: fit-content;
   align-items: center;
   flex-direction: column;
+  color: black;
 }
 
 .jss435 {
   margin-top: 12px;
   text-align: center;
+  color: black;
 }
 .MuiTypography-h4 {
-  color: #263238;
+  color: black;
   font-size: 15px;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   font-weight: 500;
-  line-height: 24px;
-  letter-spacing: -0.06px;
+  line-height: 34px;
+  
 }
 
