--- a/src/app/components/auth/registered/registered.component.css
+++ b/src/app/components/auth/registered/registered.component.css
@@ -28,3 +28,13 @@
     
     height: 100vh;
   }
+  .custom-file{
+    border: 1px solid white;
+    display: inline-block;
+    padding: 6px;
+    cursor: pointer;
+    width: 98%;
+}
+.container-input-file{
+    margin: 2rem 0;
+}
