--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -38,7 +38,7 @@
       color: #757575;
       font-weight: 400;
       font-size:20px;">
-      {{ post.price }}
+      {{ convertPrice(post.price) }}
     </p>
 
   </mat-card>
