--- a/src/app/components/posts/edit-post/edit-post.component.html
+++ b/src/app/components/posts/edit-post/edit-post.component.html
@@ -8,7 +8,8 @@
             <mat-label>Content</mat-label>
             <input matInput placeholder="Content post" formControlName="contentPost">
         </mat-form-field>
-        <mat-form-field appearance="outline"> 
+
+        <mat-form-field appearance="outline">
             <mat-select placeholder="Size" multiple formControlName="size">
                 <mat-option value="S">S</mat-option>
                 <mat-option value="M">M</mat-option>
@@ -16,9 +17,21 @@
             </mat-select>
         </mat-form-field>
         <mat-form-field appearance="outline">
-            <mat-label>Price</mat-label>
-            <input matInput placeholder="Price" formControlName="price">
+            <mat-label>Quantity</mat-label>
+            <input matInput type="number" placeholder="Ex. 12" formControlName="quantity" min="0">
+            <span matSuffix> &nbsp; <a style="font-size: 16px;">Item</a></span>
+            <mat-error *ngIf="editPostForm.invalid">Min quantity: 0 Item</mat-error>
         </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Price</mat-label>
+            <input matInput type="number" placeholder="Ex. 12" formControlName="price" min="0">
+            <span matSuffix>&nbsp; <a style="font-size: 16px;">₫</a></span>
+            <mat-error *ngIf="editPostForm.invalid">Min price: 0 ₫</mat-error>
+        </mat-form-field>
+        <!-- <mat-form-field appearance="outline">
+            <mat-label>Status</mat-label>
+            <input matInput placeholder="Status" formControlName="status">
+        </mat-form-field> -->
         <div class="container-input-file">
             <label class="custom-file">
                 <input type="file" formControlName="imagePost" (change)="handleImage($event)">
@@ -27,8 +40,7 @@
             </label>
         </div>
         <div class="container-button">
-            <input type="submit" class="mat-flat-button" value="Save"
-            [mat-dialog-close]="true">
+            <input type="submit" class="mat-flat-button" value="Save" [mat-dialog-close]="true">
         </div>
     </form>
 </div>
