--- a/src/app/shared/components/table/table.component.css
+++ b/src/app/shared/components/table/table.component.css
@@ -1,6 +1,111 @@
+.circleYes{
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: greenyellow;
+}
+section {
+  display: table;
+  margin: 8px;
+}
+.example-carded {
+  max-width: 300px;
+}
+.example-header-image {
+  background-image: url('../../../../assets/images/aca6b72e8125d6dadcdc60318a140a5c.png');
+  background-size: cover;
+}
+.example-label {
+  color: black;
+  display: table-cell;
+  font-size: 14px;
+  margin-left: 8px;
+  width: 300px;
+}
+
+
+
+.example-button-row button {
+  display: table-cell;
+  margin-right: 8px;
+}
+
+.circleNo{
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  background-color: red;
+}
+
 table {
     width: 100%;
   }
+.wrapper{
+  position: sticky;
+  border-radius: 5px;
+  right: 58%;
+  /* transform: translate(-50%,-50%); */
+}
+
+.wrapper .search_box{
+  width: 500px;
+  background: #fff;
+  border-radius: 5px;
+  height: 55px;
+  display: flex;
+  padding: 10px;
+  box-shadow: 0 8px 6px -10px #b3c6ff;
+}
+
+.wrapper .search_box .dropdown{
+  width: 150px;
+  border-right: 2px solid #dde2f1;
+  color: #9fa3b1;
+  position: relative;
+  cursor: pointer;
+}
+
+.wrapper .search_box .dropdown .default_option{
+  text-transform: uppercase;
+  padding: 13px 8px;
+  font-size: 13px;
+}
+
+.wrapper .search_box .search_field{
+  width: 350px;
+  height: 100%;
+  position: relative;
+}
+
+.wrapper .search_box .search_field .input{
+  width: 100%;
+  height: 100%;
+  border: 0px;
+  font-size: 16px;
+  padding-left: 20px;
+  padding-right: 38px;
+  color: #6f768d;
+}
+
+.wrapper .search_box .search_field .fas{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 22px;
+  color: #5078ef;
+  cursor: pointer;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #9fa3b1;
+}
+::-moz-placeholder { /* Firefox 19+ */
+ color: #9fa3b1;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #9fa3b1;
+}
+
   
   
   .mat-form-field {
@@ -15,11 +120,12 @@ table {
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    margin: 1rem -0.6rem;
+    margin: 1.5rem -0.6rem;
     
   }
   .button{
-    width: 20%;
+    width: 23%;
+    height: 40px;
     color:white;
     background:#3f51b5;
     cursor: pointer;
