--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -6,7 +6,8 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <mat-card class="example-card mat-elevation-z12">
-          <div class="card gradient-45deg-light-blue-cyan gradient-shadow min-height-100 white-text animate fadeLeft mat-elevation-z12">
+          <div
+            class="card gradient-45deg-light-blue-cyan gradient-shadow min-height-100 white-text animate fadeLeft mat-elevation-z12">
             <div class="row">
               <div class="col s7 m7">
                 <i class="material-icons background-round mt-5">add_shopping_cart</i>
@@ -16,7 +17,7 @@
                 <h5 class="mb-0 white-text">690</h5>
                 <p class="no-margin">New</p>
                 <p>6,00,00</p>
-              </div>          
+              </div>
             </div>
           </div>
         </mat-card>
@@ -25,7 +26,8 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <mat-card class="example-card mat-elevation-z12">
-          <div class="card gradient-45deg-red-pink gradient-shadow min-height-100 white-text animate fadeLeft mat-elevation-z12">
+          <div
+            class="card gradient-45deg-red-pink gradient-shadow min-height-100 white-text animate fadeLeft mat-elevation-z12">
             <div class="row">
               <div class="col s7 m7">
                 <i class="material-icons background-round mt-5">perm_identity</i>
@@ -35,7 +37,7 @@
                 <h5 class="mb-0 white-text">1885</h5>
                 <p class="no-margin">New</p>
                 <p>1,12,900</p>
-              </div>           
+              </div>
             </div>
           </div>
         </mat-card>
@@ -44,7 +46,8 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <mat-card class="example-card mat-elevation-z12">
-          <div class="card gradient-45deg-amber-amber gradient-shadow min-height-100 white-text animate fadeRight mat-elevation-z12">
+          <div
+            class="card gradient-45deg-amber-amber gradient-shadow min-height-100 white-text animate fadeRight mat-elevation-z12">
             <div class="row">
               <div class="col s7 m7">
                 <i class="material-icons background-round mt-5">timeline</i>
@@ -54,7 +57,7 @@
                 <h5 class="mb-0 white-text">80%</h5>
                 <p class="no-margin">Growth</p>
                 <p>3,42,230</p>
-              </div>           
+              </div>
             </div>
           </div>
         </mat-card>
@@ -63,7 +66,8 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <mat-card class="example-card mat-elevation-z12">
-          <div class="card gradient-45deg-green-teal gradient-shadow min-height-100 white-text animate fadeRight mat-elevation-z12">
+          <div
+            class="card gradient-45deg-green-teal gradient-shadow min-height-100 white-text animate fadeRight mat-elevation-z12">
             <div class="row">
               <div class="col s7 m7">
                 <i class="material-icons background-round mt-5">attach_money</i>
@@ -82,22 +86,85 @@
   </div>
 </div>
 
+
+
 <mat-form-field>
   <mat-label>Filter</mat-label>
   <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium">
 </mat-form-field>
+
+
+
 <div class="jss1105">
   <div class="MuiGrid-container MuiGrid-spacing-xs-4">
-    
+    <mat-card class="example-carded mat-elevation-z8">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title style="color: black;">Status</mat-card-title>
+        <mat-card-subtitle>Quantity (Items)</mat-card-subtitle>
+      </mat-card-header>
+      <mat-divider style="width: 250px; margin-left: 25px;"></mat-divider>
+      <section>
+        <button mat-icon-button style="color: #32c179;">
+          <mat-icon>pie_chart</mat-icon>
+        </button>
+        <div class="example-label">&nbsp; The product is full </div>
+
+      </section>
+      <mat-divider style="width: 150px; margin-left: 75px;"></mat-divider>
+      <section>
+
+        <div class="example-label"><button mat-icon-button style="color: #ffab1a;">
+            <mat-icon>pie_chart</mat-icon>
+          </button>&nbsp; Products are almost out</div>
+      </section>
+      <mat-divider style="width: 150px; margin-left: 75px;"></mat-divider>
+      <section>
+        <button mat-icon-button style="color: #fc6068">
+          <mat-icon>pie_chart</mat-icon>
+        </button>
+        <div class="example-label">&nbsp; The product is out of stock</div>
+      </section>
+    </mat-card>
+
+    <div id="piechart"></div>
+
+
+
+
     <div class="container-btn-new ">
+      <div class="wrapper mat-elevation-z8">
+        <form class="search_box">
+          <div class="dropdown">
+            <div class="default_option">
+              <mat-form-field style="margin-top: -19px">
+                <mat-label>Choose</mat-label>
+                <mat-select>
+                  <mat-option value="option" matColumnDef="titlePost" formControlName="titlePost">Name</mat-option>
+                  <mat-option value="option" matColumnDef="contentPost">Type</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="search_field">
+            <input matInput (keyup)="applyFilter($event)" type="text" class="input" placeholder="Search">
+          </div>
+          <button mat-raised-button color="primary">
+            <mat-icon>search</mat-icon>
+          </button>
+        </form>
+      </div>
+
       
-      <button class="button mat-elevation-z12" mat-stroked-button (click)="onNewPost()">
+      <button class="button mat-elevation-z12" mat-raised-button (click)="onNewPost()">
         <mat-icon>note_add</mat-icon>&nbsp; New Post
       </button>
-    </div>
-    
 
-    <table mat-table [dataSource]="dataSource" matSort  class="mat-elevation-z8" >
+    </div>
+
+
+
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
       <!-- Position Column -->
       <ng-container matColumnDef="titlePost">
@@ -107,7 +174,8 @@
         font-weight: 500;
         line-height: 20px;
         letter-spacing: -0.05px;"> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.titlePost}} </td>
+        <td mat-cell *matCellDef="let element">
+          {{element.titlePost}} </td>
       </ng-container>
 
       <!-- Name Column -->
@@ -118,7 +186,8 @@
         font-weight: 500;
         line-height: 20px;
         letter-spacing: -0.05px;"> Type </th>
-        <td mat-cell *matCellDef="let element"> {{element.contentPost}} </td>
+        <td mat-cell *matCellDef="let element">
+          {{element.contentPost}} </td>
       </ng-container>
 
       <!-- Weight Column -->
@@ -129,7 +198,8 @@
         font-weight: 500;
         line-height: 20px;
         letter-spacing: -0.05px;"> Size </th>
-        <td mat-cell *matCellDef="let element"> {{element.size}} </td>
+        <td mat-cell *matCellDef="let element">
+          {{element.size}} </td>
       </ng-container>
 
       <ng-container matColumnDef="imagePost">
@@ -140,8 +210,20 @@
         line-height: 20px;
         letter-spacing: -0.05px;"> Image </th>
         <td mat-cell *matCellDef="let element ">
-          <img class="mat-elevation-z4" style="width: 50px; height: 45px; margin: 10px;border-radius: 5px; "  [src]=element.imagePost>
+          <img class="mat-elevation-z4" style="width: 50px; height: 45px; margin: 10px;border-radius: 5px; "
+            [src]=element.imagePost>
         </td>
+      </ng-container>
+
+      <ng-container matColumnDef="quantity">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header style="color: #263238;
+        font-size: 14px;
+        font-family: Roboto, Helvetica, Arial, sans-serif;
+        font-weight: 500;
+        line-height: 20px;
+        letter-spacing: -0.05px;"> Quantity (Items) </th>
+        <td mat-cell *matCellDef="let element">
+          {{element.quantity}} &nbsp; Items </td>
       </ng-container>
 
       <!-- Symbol Column -->
@@ -151,8 +233,22 @@
         font-family: Roboto, Helvetica, Arial, sans-serif;
         font-weight: 500;
         line-height: 20px;
-        letter-spacing: -0.05px;"> Price </th>
-        <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+        letter-spacing: -0.05px;"> Price (₫) </th>
+        <td mat-cell *matCellDef="let element">
+          {{convertPrice(element.price)}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header style="color: #263238;
+        font-size: 14px;
+        font-family: Roboto, Helvetica, Arial, sans-serif;
+        font-weight: 500;
+        line-height: 20px;
+        letter-spacing: -0.05px;"> Status </th>
+        <td mat-cell *matCellDef="let element" 
+        [ngStyle]="{'color':element.quantity >=100 ?'#32c179':'#ffab1a' && element.quantity >=1 ? '#ffab1a':'#fc6068'}">
+          {{element.status}} <mat-icon>radio_button_checked</mat-icon>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
@@ -173,3 +269,5 @@
     <mat-paginator class="mat-elevation-z8" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
 </div>
+
+
