--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -9,7 +9,7 @@
 
   <mat-icon matBadge="15" matBadgeColor="warn">home</mat-icon>
   &nbsp;&nbsp;
-  <a routerLink="/">
+  <a style="color:white;" routerLink="/home">
     <span>Home</span>
   </a>
   <span class="fill-remaining-space"></span>
