--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -40,6 +40,7 @@
             </form>
         </mat-card-content>
         <p>Create an account ? <a [routerLink]="['/registered']">Registered</a></p>
+        <p>Create an account ? <a [routerLink]="['/pagelogin']">Registered With NodeJs</a></p>
     </mat-card>
 </div>
 
