--- a/src/app/components/auth/registered/registered.component.css
+++ b/src/app/components/auth/registered/registered.component.css
@@ -9,7 +9,9 @@
     width: 100%;
     min-width: 500px;
   }
-
+.a{
+  color: white;
+}
   .mat-card-title{
     justify-content:left;
     display: flex;
