--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -3,7 +3,8 @@
     <img style="width: 80px;height: 60px;" src="../../../../assets/images/nike-logo-white.png">
     &nbsp;
     <span class="fill-remaining-space"></span>
-    <a [routerLink]="['/']">{{appName}}</a>
+    <a [routerLink]="['/home']" style="font-family:'Athalita' ; src: url(../../../../../../assets/font/Athalita.ttf)
+    ;font-weight: bold; font-style: italic;font-size: larger;">{{appName}}</a>
     
     <span class="fill-remaining-space"></span>
 
